<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.hongkongpetownersapp.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.hongkongpetownersapp.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />

        <action
            android:id="@+id/action_SecondFragment_to_petListFragment"
            app:destination="@id/petListFragment" />

        <action
            android:id="@+id/action_SecondFragment_to_addPetFragment"
            app:destination="@id/addPetFragment" />
    </fragment>

    <fragment
        android:id="@+id/petListFragment"
        android:name="com.example.hongkongpetownersapp.PetListFragment"
        android:label="@string/my_pets"
        tools:layout="@layout/fragment_pet_list">

        <action
            android:id="@+id/action_petListFragment_to_addPetFragment"
            app:destination="@id/addPetFragment" />

        <action
            android:id="@+id/action_petListFragment_to_petDetailFragment"
            app:destination="@id/petDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/addPetFragment"
        android:name="com.example.hongkongpetownersapp.AddPetFragment"
        android:label="@string/add_new_pet"
        tools:layout="@layout/fragment_add_pet" />

    <fragment
        android:id="@+id/petDetailFragment"
        android:name="com.example.hongkongpetownersapp.PetDetailFragment"
        android:label="@string/pet_details"
        tools:layout="@layout/fragment_pet_detail">

        <action
            android:id="@+id/action_petDetailFragment_to_cameraFragment"
            app:destination="@id/cameraFragment" />
    </fragment>

    <fragment
        android:id="@+id/cameraFragment"
        android:name="com.example.hongkongpetownersapp.CameraFragment"
        android:label="@string/take_photo"
        tools:layout="@layout/fragment_camera" />

</navigation>